nombres de sensores actualizado

--- a/centro-datos-salud/broker/mosquitto.conf
+++ b/centro-datos-salud/broker/mosquitto.conf
@@ -1,11 +1,12 @@
-persistence true
-persistence_location /mosquitto/data/
+#este archivo define como se comporta el broker Mosquitto al inicia
+persistence true #Guarda el estado del broker (mensajes pendientes, sesiones, etc.) en disco.
+persistence_location /mosquitto/data/ #Si el contenedor se reinicia, no se pierden los mensajes.
 log_dest stdout
 
-listener 1883
+listener 1883 #puerto estandar para mqtt, todos los dispositivos lo usan. 
 protocol mqtt
 
-listener 9001
+listener 9001 #aplicaciones que corren en el navegador. 
 protocol websockets
 
-allow_anonymous true
+allow_anonymous true #Permite conexiones sin usuario ni contrasena.
